aks-cluster-and-oauth2-proxy-with-nginx-and-az-ad/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: <service_name>-service-oauth2-proxy
  name: <service_name>-service-oauth2-proxy-deployment
  namespace: <namespace>
spec:
  replicas: 1
  selector:
    matchLabels:
      application: <service_name>-service-oauth2-proxy
  template:
    metadata:
      labels:
        application: <service_name>-service-oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --azure-tenant=<azure_tenant_id> # Azure AD OAuth2 Proxy application Tenant ID
        - --pass-access-token=true
        - --cookie-name=_proxycookie 
        - --upstream=<service_public_domain>
        - --cookie-csrf-per-request=true
        - --cookie-csrf-expire=5m           # Avoid unauthorized csrf cookie errors.
        - --email-domain=*                  # Email domains allowed to use the proxy
        - --http-address=0.0.0.0:4180
        - --oidc-issuer-url=https://login.microsoftonline.com/<azure_tenant_id>/v2.0
        - --user-id-claim=oid

        name: <service_name>-service-oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
        imagePullPolicy: Always      
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: <service_name>-service-oauth2-proxy
  name: <service_name>-service-oauth2-proxy-svc
  namespace: <namespace>
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    application: <service_name>-service-oauth2-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: <service_name>-service-oauth2-proxy-ingress
  namespace: <namespace>
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - <domain_name>
      secretName: <secret_name>
  rules:
     - http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: <service_name>-service-oauth2-proxy-svc
                port:
                  number: 4180
       host: <domain_name>
